--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="/assets/css/styles.css">
+  {% seo %}
   </head>
   <body>
   	{% include navigation.html %}
